--- a/particles/cftemplates/mysql/read_replica.template.json.hbs
+++ b/particles/cftemplates/mysql/read_replica.template.json.hbs
@@ -1,16 +1,19 @@
 {{#layout}}
 
 
-  {{set 'mysql/params_shared'}}
+  {{set "mysql/params_common"}}
+  {{set "mysql/network_params"}}
+  {{set "mysql/vpc_security_group"}}
+
+  {{parameter "name_tag" logicalId="NameTag"}}
 
   {{
-    parameter "module:particles-common-core" "base"
+    parameter "m:core" "base"
     logicalId="SourceDBInstanceIdentifier"
     type="String"
     default=""
     description=""
   }}
-
 
   {{#resource logicalId="DBSubnetGroup"}}
     "Type": "AWS::RDS::DBSubnetGroup",
@@ -20,35 +23,20 @@
     }
   {{/resource}}
 
-  {{#resource logicalId="DBInstance"}}
-    "Type": "AWS::RDS::DBInstance",
+  {{#resource "db_instance" logicalId="DBInstance"}}
     "Properties": {
       "DBInstanceClass": {"Ref": "DBInstanceClass"},
       "SourceDBInstanceIdentifier": {"Ref": "SourceDBInstanceIdentifier"},
       "DBSubnetGroupName": {"Ref": "DBSubnetGroup"},
       "Engine": "MySQL",
       "VPCSecurityGroups": [{"Fn::If": [
-        "DBSecurityGroupIdIsEmpty",
-        {"Ref": "DBSecurityGroup"},
-        {"Ref": "DBSecurityGroupId"}
+        "VpcSecurityGroupIdIsEmpty",
+        {"Ref": "VpcSecurityGroup"},
+        {"Ref": "VpcSecurityGroupId"}
       ]}]
     }
   {{/resource}}
 
-  {{#output logicalId="InstanceID"}}
-    "Value": {"Ref": "DBInstance"}
-  {{/output}}
-
-  {{#output logicalId="EndpointAddress"}}
-    "Value": {"Fn::GetAtt" : [ "DBInstance", "Endpoint.Address" ]}
-  {{/output}}
-
-  {{#output logicalId="EndpointPort"}}
-    "Value": {"Fn::GetAtt": [ "DBInstance", "Endpoint.Port" ]}
-  {{/output}}
-
-  {{#output logicalId="ARN"}}
-    "Value": {"Fn::Join": [":", ["arn:aws:rds", {"Ref": "AWS::Region"}, {"Ref": "AWS::AccountId"}, "db", {"Ref": "DBInstance"} ]]}
-  {{/output}}
+  {{set "db_instance/output_all" dbInstanceLogicalId="DBInstance"}}
 
 {{/layout}}
