--- a/particles/sets/mysql/network_params.hbs
+++ b/particles/sets/mysql/network_params.hbs
@@ -1,15 +1,2 @@
-
-  {{
-    parameter "module:particles-common-core" "base"
-    logicalId="SubnetIds"
-    type="List<AWS::EC2::Subnet::Id>"
-    default=""
-  }}
-
-  {{
-    parameter "module:particles-common-core" "base"
-    logicalId="VpcId"
-    type="AWS::EC2::VPC::Id"
-    default=""
-  }}
-
+{{parameter "m:vpc" "subnet/id_list" logicalId="SubnetIds"}}
+{{parameter "m:vpc" "vpc/id" logicalId="VpcId"}}
