--- a/particles/sets/mysql/vpc_security_group.hbs
+++ b/particles/sets/mysql/vpc_security_group.hbs
@@ -1,5 +1,5 @@
   {{
-    parameter "db_security_group_id"
+    parameter "vpc_security_group_id"
     logicalId="VpcSecurityGroupId"
     description="If blank a new group will be created"
     optional=true
