--- a/particles/cftemplates/mysql/read_replica.template.json.hbs
+++ b/particles/cftemplates/mysql/read_replica.template.json.hbs
@@ -1,8 +1,7 @@
 {{#layout}}
 
-
   {{set "mysql/params_common"}}
-  {{set "mysql/network_params"}}
+  {{set "mysql/params_network"}}
   {{set "mysql/vpc_security_group"}}
 
   {{parameter "name_tag" logicalId="NameTag"}}
